# rover-old-Nick-Autonomy

./: Autonomy.cpp  CMakeLists.txt  README.md  package.xml
Calib/: CMakeLists.txt  readme.md
Calib/include/: calibrator.cpp  calibrator.hh
Calib/src/: calibrator.cpp
arucoApp/: CMakeLists.txt  readme.md
arucoApp/impl/: AIKO.cc
arucoApp/include/: AIKO.hh
arucoApp/include/dataTypes/: Detection.hh  VisionConstants.hh  classId.hh
arucoApp/src/: ObjectDetection.cpp
calib/: calibrator.py
depthApp/: readme.md
navigatorApp/: CMakeLists.txt  package.xml  readme.md
navigatorApp/include/: AutonomyNode.hh  nav.cc  nav.cpp  nav.hh
navigatorApp/include/dataTypes/: GPS.hh  navConstants.h  navStates.hh
navigatorApp/include/navigators/: Daedalus.hh  GlobalNavigator.cc  GlobalNavigator.hh  LocalNavigator.hh
navigatorApp/navImpl/: AutonomyNode.cc  GlobalNavigator.cc  nav.cc
navigatorApp/source/: GlobalNavigator.cc
navigatorApp/src/: navigator.cpp
