<?xml version="1.0"?>
<package format="2">
  <name>navigator</name>
  <version>0.1.0</version>
  <description>Me will figure this out later</description>
  <license>None</license>
  <maintainer email="nbm0012@uah.edu">Nick McGarry</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
</package>
